--- a/components/recipes/com.example.PublishSwitchState-1.0.0.yaml
+++ b/components/recipes/com.example.PublishSwitchState-1.0.0.yaml
@@ -6,7 +6,7 @@ ComponentConfiguration:
   DefaultConfiguration:
     accessControl:
       aws.greengrass.ipc.mqttproxy:
-        'com.example.PublishSwitchState:mqttproxy:1':
+        com.example.PublishSwitchState:mqttproxy:1:
           operations:
           - "aws.greengrass#PublishToIoTCore"
           resources:
